# mathisbd.github.io

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  deploy.sh  index.html  mathisbd-blog.cabal  site.hs
_cache/: -1273865353365504913  -3667594044612465272  -5152796895696119073  -5185344883098693007  4477895309572041715  5250470449129180733  5493635937461857531  6248866596071291076
docs/: CV.html  about.html  archive.html  contact.html  index.html  publications.html  talks.html
docs/css/: default.css
docs/posts/: 2015-08-23-example.html
src/: CV.md  contact.md  index.html  index.md  publications.md  site.hs  talks.md
src/css/: default.css
src/templates/: default.html
