cabal-version:       2.2

name:                mathisbd-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MathisBD/mathisbd.github.io#README
license:             MIT
license-file:        LICENSE
author:              Mathis Bouverot-Dupuis
maintainer:          mathis.bouverot@ens.psl.eu
copyright:           2024 Mathis Bouverot-Dupuis
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable mathisbd-blog
  main-is:             site.hs
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       hakyll
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
